--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ h1, .h1 h2, .h2 h3, .h3 h4, .h4 h5, .h5 h6, .h6 {
 
 #home {
   background-image: url(yujiii.png);
-  background-color: grey;
+  background-color: #f5f5dc;
   background-size: cover;
   
 }
@@ -73,4 +73,28 @@ background-color: orange;
 
 .container {
   color: grey;
+}
+
+
+video {
+  height: 200px;
+  width: 300px;
+}
+
+audio {
+  margin: 20px;
+  height: 50px;
+  width: 10;
+}
+
+h4 {
+  color: grey;
+}
+
+h1 {
+  color: black;
+}
+
+body {
+  background-color: #f5f5dc;
 }
