--- a/style.css
+++ b/style.css
@@ -46,6 +46,8 @@ h1, .h1 h2, .h2 h3, .h3 h4, .h4 h5, .h5 h6, .h6 {
 
 .btn-ig {
   background-color: #feda77;
+  position: relative;
+  top: 130px;
 }
 
 .btn-brand {
@@ -97,15 +99,33 @@ video {
 audio {
   height: 50px;
   width: 300px;
-  margin: 20px;
+  position: relative;
+  top: 90px;
 }
 
 h4 {
   color: white;
+  font-family: "Lucida Console", "Courier New", monospace;
+  letter-spacing: 1px;
+  word-spacing: 2px;
+  position: relative;
+  top: 100px;
+}
+
+.merah {
+  color: red;
 }
 
 h1 {
   color: black;
+  position: relative;
+  top: 130px;
+  width: 400px;
+
+}
+
+h2 {
+  font-family: cursive;
 }
 
 body {
@@ -116,6 +136,7 @@ body {
 
 .back {
  color: black;
+ font-family: Sans-Serif;
 }
 
 .line {
