--- a/style.css
+++ b/style.css
@@ -29,12 +29,12 @@ h1, .h1 h2, .h2 h3, .h3 h4, .h4 h5, .h5 h6, .h6 {
 
 .text-brand {
   color:#b38867;
-  width: 300px;
+  width: 100px;
 }
 
 .navbar {
-  padding-top: 30px
-  padding-bottom: 30px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
 #home {
@@ -120,7 +120,7 @@ h1 {
   color: black;
   position: relative;
   top: 130px;
-  width: 400px;
+  width: 250px;
 
 }
 
